# Portfolio-25

./: .gitignore  README.md  internacionalizacion.md
backend/: SALES_BOT_OPTIMIZADO.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  schemas.py
backend/app/api/endpoints/: __init__.py  blog.py  chatbot.py  leads.py  sales_chatbot.py
backend/app/core/: __init__.py  config.py  intent_detection.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/models/: google_calendar.py
backend/migrations/: add_optimized_sales_bot.sql
frontend/: INTERNATIONALIZATION.md  MIGRACION_SALES_BOT.md  env.example  i18n.ts  middleware.ts  next.config.js  tailwind.config.js
frontend/scripts/: test-sales-bot.js
frontend/src/: Icons.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[locale]/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: ApproachSection.tsx  BlogSection.tsx  ChatbotFloat.tsx  DemoSection.tsx  DozoTechLogo.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  IconSystem.tsx  LanguageSelector.tsx  LeadCaptureFloat.tsx  PortfolioSection.tsx  SalesAnalyticsDashboard.tsx  SolutionsSection.tsx  TechStackSection.tsx
frontend/src/components/Research/: ConvolutionalClassifierProject.tsx  FruitClassifierProject.tsx  MLProject.tsx  PyTorchProject.tsx  ResearchSection.tsx  index.tsx
frontend/src/config/: translations.ts
frontend/src/hooks/: useLanguage.ts
frontend/src/lib/: api.ts  toast.js
frontend/src/styles/: globals.css
frontend/src/utils/: analytics.ts
(+2 files in other folders)
